# VTablePatch

./: CMakeLists.txt  LICENSE  vtablepatch.hpp
tests/: CMakeLists.txt  PatchingWithPrivateInheritance.cpp  PatchingWithPublicInheritance.cpp
